--- a/.github/workflows/upload_test.yaml
+++ b/.github/workflows/upload_test.yaml
@@ -18,4 +18,4 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           source: "README.md"
-          target: "raspbian"
+          target: "raspbian/.voicesat"
