--- a/.github/workflows/raspbian-ovos.yaml
+++ b/.github/workflows/raspbian-ovos.yaml
@@ -13,7 +13,7 @@ jobs:
         id: build
         with:
           # Final image name.
-          image-name: raspbian-hive-voice-sat
+          image-name: raspbian-hive-voice-sat-32b
 
           # List of stage name to execute in given order. Relative and absolute paths to
           # custom stage directories are allowed here. Note that by default pi-gen exports
@@ -104,7 +104,7 @@ jobs:
 
           # Release version of pi-gen to use. This can both be a branch or tag name known in
           # the pi-gen repository.
-          pi-gen-version: arm64
+          pi-gen-version: master
 
           # The release version to build images against. Valid values are jessie, stretch,
           # buster, bullseye, and testing.
