custom whl for cryptography

--- a/stage-sat/01-sat/files/mycroft.conf
+++ b/stage-sat/01-sat/files/mycroft.conf
@@ -1,9 +1,4 @@
 {
-    "listener": {
-        "VAD": {
-            "module": "ovos-vad-plugin-silero"
-            }
-        },
     "hotwords": {
         "hey_mycroft": {
             "module": "ovos-ww-plugin-precise-lite",
@@ -22,9 +17,9 @@
             }
         },
     "tts": {
-        "fallback_module": "ovos-tts-plugin-piper",
-        "ovos-tts-plugin-piper": {
-            "voice": "alan-low"
+        "fallback_module": "ovos-tts-plugin-mimic",
+        "ovos-tts-plugin-mimic": {
+            "voice": "ap"
             }
         },
     "padatious": {"regex_only": false},
@@ -32,7 +27,7 @@
         "backends": {
             "OCP": {
                 "playback_mode": 40,
-                "preferred_audio_services": ["vlc", "mplayer", "simple"],
+                "preferred_audio_services": ["mplayer", "vlc" "simple"],
                 "autoplay": false,
                 "min_timeout": 3,
                 "max_timeout": 10
@@ -41,7 +36,7 @@
         },
     "logs": {
         "path": "/ramdisk/mycroft",
-        "max_bytes": 2000000,
+        "max_bytes": 1000000,
         "backup_count": 1
         }
 }
