--- a/.github/workflows/raspbian-ovos.yaml
+++ b/.github/workflows/raspbian-ovos.yaml
@@ -104,7 +104,7 @@ jobs:
 
           # Release version of pi-gen to use. This can both be a branch or tag name known in
           # the pi-gen repository.
-          pi-gen-version: master
+          pi-gen-version: bullseye
 
           # The release version to build images against. Valid values are jessie, stretch,
           # buster, bullseye, and testing.
